--- a/www/app.json
+++ b/www/app.json
@@ -1,15 +1,17 @@
 {
-    "reponame": "sample-masheryhotwire",
-    "title": "Mashery Hotwire App",
-    "abbr": "MasheryHotwire",
-    "tooltip": "A demo app that features the Hotwire API, part of the Mashery API Network",
-    "description": "This demo app provides a way to see the Hotwire API in action.",    
-    "articleUrl": "http://software.intel.com/html5/articles/integrating-apis-with-xdk-hotwire-sample-app",    
-    "highlights": ["App Framework", "Web Services API"],
-    "keywords": ["App Framework", "Web Services API"],
-    "relname": "4.0.0",
-    "visible": "true",
-    "appname": "demo.masheryhotwire",
-    "apppreview": "false"
+	"reponame":"sample-app-framework",
+	"title":"App Framework Sample",
+	"abbr":"AppFramework",
+	"tooltip":"[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
+	"description":"[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
+	"articleurl":"http://software.intel.com/en-us/html5/articles/intel-xdk-app-framework-sample",
+    	"screenshotUrl":"",
+    	"iconUrl":"",
+	"highlights":["App Designer", "App Framework"],
+    	"keywords":["App Designer", "App Framework"],
+	"visible": "true",
+	"apppreview":"true",
+	"type":"appdesigner",
+	"appname":"demo.afkitchensink",
+	"relname":"4.0.0"
 }
-
