--- a/app.json
+++ b/app.json
@@ -1,18 +1,13 @@
 {
-	"reponame":"sample-app-framework",
-	"title":"App Framework Sample",
-	"abbr":"AppFramework",
-	"tooltip":"[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
-	"description":"[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
-	"articleurl":"http://software.intel.com/en-us/html5/articles/intel-xdk-app-framework-sample",
-    	"screenshotUrl":"",
-    	"iconUrl":"",
-	"highlights":["App Designer", "App Framework"],
-    	"keywords":["App Designer", "App Framework"],
-	"visible": "true",
-	"apppreview":"true",
-	"type":"appdesigner",
-	"appname":"demo.afkitchensink",
-	"relname":"4.0.0",
-  	"projectTypeName": "com.intel.xdk.projecttype.webapp"
+"repoName":"sample-app-framework",
+"title":"App Framework Sample",
+"tooltip":"[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
+"description":"[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
+"articleUrl":"http://software.intel.com/en-us/html5/articles/intel-xdk-app-framework-sample",
+"highlights":["App Designer", "App Framework"],
+"keywords":["App Designer", "App Framework"],
+"visible": "true",
+"apppreview":"true",
+"type":"appdesigner",
+"projectTypeName": "com.intel.xdk.projecttype.webapp"
 }
