--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
    "description" : "[App Designer Ready] A simple app that shows various App Framework UI components that can be used",
    "appPreview" : true,
    "repoName" : "sample-app-framework",
-   "articleUrl" : "http://software.intel.com/en-us/html5/articles/intel-xdk-app-framework-sample",
+   "articleUrl" : "https://github.com/gomobile/sample-app-framework/blob/master/docs/README.md",
    "relName" : null,
    "highlights" : [
       "App Designer",
